--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/eclipse,java-web
-# Edit at https://www.gitignore.io/?templates=eclipse,java-web
+# Created by https://www.gitignore.io/api/macos,eclipse,java-web
+# Edit at https://www.gitignore.io/?templates=macos,eclipse,java-web
 
 ### Eclipse ###
 .metadata
@@ -75,4 +75,32 @@ local.properties
 ## ignoring target file
 target/
 
-# End of https://www.gitignore.io/api/eclipse,java-web
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# End of https://www.gitignore.io/api/macos,eclipse,java-web
